添加全局种子支持以确保实验可复现；优化数据加载和模型选择过程中的种子设置；更新Hydra解析器以支持新格式的路径解析。

--- a/configs/stage_1_pretrain.yaml
+++ b/configs/stage_1_pretrain.yaml
@@ -22,6 +22,9 @@ hydra:
 
 tag: "none"
 
+# Global seed for reproducibility  
+seed: 42
+
 # Model configuration
 selector_model:
   path: "converted_models/select_moe_converted_OLMoE-1B-7B-0125"
@@ -37,7 +40,6 @@ dataset:
     - "flan_v2"
     - "oasst1"
   subset_ratio: 0.05
-  seed: 42
   shuffle: true
   max_sequence_length: 2048
   processing_num_workers: 10
