固定了依赖版本，防止以外错误出现。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ dependencies = [
     "hydra-core",
     "torch==2.6.0",
     "transformers==4.53.2",
-    "peft",
-    "accelerate",
+    "peft==0.16.0",
+    "accelerate==1.8.1",
     "lm-eval",
     "torchvision>=0.21.0",
-    "datasets",
+    "datasets==4.0.0",
     "scipy>=1.16.0",
     "matplotlib>=3.10.5",
     "seaborn>=0.13.2",
