--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "numpy>=1.24.0",
     "cuml-cu12>=25.8.0",
     "umap>=0.1.1",
+    "vllm>=0.8.5.post1",
+    "prettytable>=3.16.0",
 ]
 
 [tool.uv.sources]
