--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "transformers==4.53.2",
     "peft==0.16.0",
     "accelerate==1.8.1",
-    "lm-eval",
+    "lm-eval==0.4.9",
     "torchvision>=0.21.0",
     "datasets==4.0.0",
     "scipy>=1.16.0",
