feat: Implement shared memory dataset loading and management
- Added random_selection.py for random data selection from datasets using Hydra for configuration management.
- Created selection_config.yaml to store metadata and parameters for the selection process.
- Introduced share_dataset module for high-performance shared memory dataset access, including:
  - SharedDatasetClient for loading datasets from shared memory.
  - SharedMemoryConfig for managing shared memory configurations.
  - DatasetServerManager for controlling the dataset server lifecycle.
  - SharedDatasetServer for serving datasets in shared memory.
- Implemented dataset loading from HuggingFace datasets with OpenHermes format conversion.
- Added logging and error handling throughout the dataset loading and server management processes.

--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -65,6 +65,12 @@ dataset:
   max_sequence_length: 1024
   processing_num_workers: 10
   overwrite_cache: false
+  
+  # Shared memory configuration (共享内存配置)
+  use_shared_memory: false  # 是否启用共享内存加速数据集加载
+  shared_memory:
+    server_timeout: 30      # 服务器响应超时时间（秒）
+    auto_start: false       # 是否自动启动服务器（暂未实现）
 
 # Training configuration
 training:
