feat: 添加字符串长度排序功能，优化数据选择过程；更新相关配置和文档

--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -40,7 +40,7 @@ tag: "none"
 dataset:
   # Data source selection: "local" or "hf" (should match stage 1 configuration)
   dataset_from: "hf"  # Options: "local" (本地数据集), "hf" (HuggingFace数据集)
-  
+
   # Local dataset configuration (used when dataset_from="local")
   local:
     data_dir: "dataset/train/processed"
@@ -49,7 +49,7 @@ dataset:
       - "dolly"
       - "flan_v2"
       - "oasst1"
-  
+
   # HuggingFace dataset configuration (used when dataset_from="hf")
   hf:
     datasets:
@@ -57,14 +57,17 @@ dataset:
         dataset_name: "openhermes"
         subset: null
         split: "train"
-  
+
   # Common parameters
   shuffle: false
   max_sequence_length: 1024
   # 1.0 means using the full dataset
-  subset_ratio: 1 
+  subset_ratio: 1
   processing_num_workers: 10
   overwrite_cache: false
+
+  # Sequence length sorting configuration
+  sort_by_length: true  # 是否按字符串长度降序排列数据（推荐开启以优化推理效率）
 
 # Data selection percentage (0.05 means select top 5% of the data)
 selection_percentage: 0.05
