--- a/configs/continue_selection.yaml
+++ b/configs/continue_selection.yaml
@@ -1,56 +1,31 @@
 # @package _global_
 
-stage: continue_selection
+# Continue Selection Configuration (数据筛选阶段)
+# 基于已收集的统计数据进行质量筛选
 
-# Hydra settings to create a timestamped output directory
+# Hydra Configuration
 hydra:
   run:
     dir: outputs/continue_selection/${now:%Y-%m-%d}/${now:%H-%M-%S}
   sweep:
     dir: outputs/continue_selection
     subdir: ${now:%Y-%m-%d}/${now:%H-%M-%S}
-  job:
-    config:
-      override_dirname:
-        kv_sep: "="
-        item_sep: ","
-        exclude_keys:
-          - hydra.run.dir
-          - hydra.sweep.dir
-          - hydra.sweep.subdir
 
-# Required: Directory containing router_data files
-# Example: outputs/stage_2_selection/2025-08-11/03-52-40-batch=8_lr=0.001_loss=beta_moment_matching_tag=none/router_data
-router_data_dir: "outputs/stage_2_selection/2025-08-11/03-52-40-batch=8_lr=0.0003_loss=sigmoid_tag=none/router_data"
+# Router data directory (from stage 2 selection)
+router_data_dir: null  # Must be provided via command line
 
-# Data selection percentage (0.05 means select top 5% of the data)
-selection_percentage: 0.05
+# Data directory (optional, for loading original messages)
+data_dir: null  # If not provided, will auto-infer from router_data_dir
 
-# Optional: Original dataset directory path (auto-inferred if not specified)
-data_dir: null
+# Selection percentage (e.g., 0.30 means select top 30%)
+selection_percentage: 0.30
 
-# Clustering method: currently only "kmeans" is supported
-clustering_method: "kmeans"
-
-# Clustering parameters
-clustering_params:
-  # K-Means specific parameters
-  auto_k: false  # Automatically determine k using Elbow method
-  k: 26  # Manual k value (only used if auto_k=false)
-  k_range: [20, 100]  # k search range for Elbow method
-  max_iters: 300  # Maximum iterations
-  
-  # K-Means parallel computation parameters
-  enable_parallel_kmeans: true  # Enable multi-GPU parallel computation for k-value search
-  parallel_processes: 7  # Number of parallel processes for k-value computation
-  gpu_allocation_strategy: "round_robin"  # GPU allocation strategy: "round_robin" or "balanced"
-
-# Device configuration
-device: "auto"  # "cuda", "cpu", or "auto" for automatic detection
-
-# Debug configuration
-debug_print: false  # Enable detailed debug output for clustering algorithms
+# Quality scoring parameters
+quality_params:
+  alpha: 1.0      # token权重参数（默认1；>1 更偏重高熵；<1 更均衡）
+  eps: 1.0e-8     # 数值下界，防分母为0
+  tau: 0.0        # 稳定性参数（可选，0表示不使用）
 
 # Logging configuration
 logging:
-  verbose: false  # Enable detailed logging output
+  verbose: false  # Enable debug logging
