--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -1,14 +1,14 @@
 # @package _global_
 
 stage: warmup
-# Stage 1: Pre-training Configuration
+# Stage 1: Quality Gate Warmup Configuration
 
 # Hydra Configuration
 defaults:
   - _self_
 
 # Define common directory template
-_target_dir_template_: ${now:%Y-%m-%d}/${now:%H-%M-%S}-batch=${training.batch_size}_lr=${training.learning_rate}_loss=${training.quality_loss_type}_lossWeight=${training.quality_loss_weight}_trash=${training.trash_expert_mode}_sampleWise=${training.quality_loss_params.sample_wise_averaging}_tag=${tag}
+_target_dir_template_: ${now:%Y-%m-%d}/${now:%H-%M-%S}-batch=${training.batch_size}_lr=${training.learning_rate}_loss=${training.quality_loss_type}_lossWeight=${training.quality_loss_weight}_sampleWise=${training.quality_loss_params.sample_wise_averaging}_tag=${tag}
 
 hydra:
   run:
@@ -33,8 +33,10 @@ seed: 42
 
 # Model configuration
 selector_model:
-  path: "converted_models/select_moe_converted_OLMoE-1B-7B-0125"
-  tokenizer_name: "allenai/OLMoE-1B-7B-0125"
+  # 可以是Qwen3基座模型路径，或已经转换的质量门控模型路径
+  path: "Qwen/Qwen3-1.7B"  # 或 "path/to/quality_gate_model"
+  tokenizer_name: "Qwen/Qwen3-1.7B"  # 如果不指定，使用path
+
 output_dir: ${hydra:run.dir}
 
 # Dataset configuration
@@ -80,38 +82,27 @@ training:
   epochs: 2
   optimizer: "AdamW"
   scheduler: "linear"
-  peft_mode: "full_rank"  # Options: "lora" (低秩微调), "full_rank" (路由参数全秩微调)
+  peft_mode: "full_rank"  # Options: "lora" (低秩微调), "full_rank" (质量门控参数全秩微调)
   lora:
     r: 16
     lora_alpha: 64
     lora_dropout: 0
     target_modules:
-      - "mlp.gate"
+      - "quality_gate.gate"
   gpu_grab:
     grab: false
     memory_need_gb: 24
     over_grab: false
-  # New two-tier routing architecture parameters
+  # Quality gate parameters
   quality_loss_weight: 1
   quality_gate_init_mean: 0.0
   quality_gate_init_std: 0.02
-  trash_expert_mode: "zero"  # Options: "zero", "noise", "custom"
-  enable_load_balancing: false
-  output_router_logits: true
   # Quality loss configuration
-  quality_loss_type: "sigmoid"  # Options: "sigmoid", "beta_moment_matching", "mean_variance_regularization", "mse"
+  quality_loss_type: "linear"  # 线性损失（直接使用sigmoid后的good_ratio）
   quality_loss_debug: false  # Enable debug output for quality loss computation
   quality_loss_params:
-    # Beta moment matching parameters (方案一)
-    beta_target_mean: 0.5
-    beta_target_var: 0.05
-    w_mean: 1.0
-    w_var: 1.0
-    # Mean-variance regularization parameters (方案二)
-    lambda_var: 0.1
     # Loss averaging strategy
     sample_wise_averaging: true  # false: token-wise averaging, true: sample-wise averaging (avoid long sequence bias)
     # Full sequence prediction settings
     full_sequence_prediction: true   # Enable full sequence prediction (vs assistant-only SFT)
     mask_special_tokens: true        # Mask special format tokens like <|user|>, <|assistant|>
-
