feat: 完善项目文档，初始化各模块的 CLAUDE.md 文件
- 创建 Quality-Gate 项目文档，包含变更记录、项目愿景、架构总览等。
- 记录各模块职责及相关配置，更新 Hydra 配置文件结构。
- 添加脚本模块文档，详细说明模型转换和数据选择功能。
- 更新模型模块文档，描述 Quality-Gate 模型架构和接口。

--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -33,9 +33,10 @@ seed: 42
 
 # Model configuration
 selector_model:
-  # 可以是Qwen3基座模型路径，或已经转换的质量门控模型路径
-  path: "Qwen/Qwen3-1.7B"  # 或 "path/to/quality_gate_model"
-  tokenizer_name: "Qwen/Qwen3-1.7B"  # 如果不指定，使用path
+  # 必须指向预先转换好的质量门控模型路径
+  # 使用 scripts/convert_qwen_to_quality_gate.py 预先完成模型转换
+  path: "converted_models/quality_gate_Qwen3-1.7B"
+  tokenizer_name: "Qwen/Qwen3-1.7B"  # 分词器路径（通常是原始Qwen3模型）
 
 output_dir: ${hydra:run.dir}
 
