fix: 更新模型路径和名称以匹配新的基础模型版本
- 将配置文件中的模型路径和分词器名称更新为 "quality_gate_Qwen3-1.7B-Base"。
- 修改模型转换脚本中的默认模型名称为 "Qwen/Qwen3-1.7B-Base"。
- 确保错误提示信息中反映新的模型版本，增强用户体验。

--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -35,8 +35,8 @@ seed: 42
 selector_model:
   # 必须指向预先转换好的质量门控模型路径
   # 使用 scripts/convert_qwen_to_quality_gate.py 预先完成模型转换
-  path: "converted_models/quality_gate_Qwen3-1.7B"
-  tokenizer_name: "Qwen/Qwen3-1.7B"  # 分词器路径（通常是原始Qwen3模型）
+  path: "converted_models/quality_gate_Qwen3-1.7B-Base"
+  tokenizer_name: "Qwen/Qwen3-1.7B-Base"  # 分词器路径（通常是原始Qwen3模型）
 
 output_dir: ${hydra:run.dir}
 
