--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -57,9 +57,17 @@ dataset:
   # HuggingFace dataset configuration (used when dataset_from="hf")
   hf:
     datasets:
-      - name: "teknium/OpenHermes-2.5"
-        dataset_name: "openhermes"
-        subset: null
+      # GSM8K 数据集 (7,473 个训练样本)
+      - name: "openai/gsm8k"
+        dataset_name: "gsm8k"
+        subset: "main"
+        split: "train"
+      # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
+      # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
+      #          number_theory, prealgebra, precalculus
+      - name: "EleutherAI/hendrycks_math"
+        dataset_name: "hendrycks_math"
+        subset: "__full_subset__"
         split: "train"
   
   # Common parameters
