feat: 更新stage_3_finetune.yaml和finetune.py，增强PEFT适配器保存功能
- 在配置文件中添加检查点保存配置，支持中间检查点和合并模型的保存选项。
- 修改finetune.py以支持PEFT适配器的保存路径和合并逻辑，确保训练过程中的适配器能够正确保存和合并。
- 增强日志记录，提供更清晰的训练过程信息。

--- a/configs/stage_3_finetune.yaml
+++ b/configs/stage_3_finetune.yaml
@@ -32,6 +32,12 @@ defaults:
 
 output_dir: ${hydra:run.dir}
 
+# Checkpoint saving configuration
+checkpoint:
+  save_intermediate: true  # 是否保存训练过程中的中间检查点（每个epoch结束时）
+  peft_dir: "PEFT"  # PEFT适配器保存的子目录名称
+  save_merged_model: true  # 是否在训练结束后保存合并的完整模型
+
 # Dataset configuration
 dataset:
   # Data source selection for full mode: "local" or "hf"
