--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -42,33 +42,36 @@ output_dir: ${hydra:run.dir}
 
 # Dataset configuration
 dataset:
-  # Data source selection: "local" or "hf"
-  dataset_from: "hf"  # Options: "local" (本地数据集), "hf" (HuggingFace数据集)
+  # 本地数据集根目录（所有 local 数据集的根路径）
+  local_dataset_dir: "dataset/train/processed"
   
-  # Local dataset configuration (used when dataset_from="local")
-  local:
-    data_dir: "dataset/train/processed"
-    dataset_names:
-      - "cot"
-      - "dolly"
-      - "flan_v2"
-      - "oasst1"
-  
-  # HuggingFace dataset configuration (used when dataset_from="hf")
-  hf:
-    datasets:
-      # GSM8K 数据集 (7,473 个训练样本)
-      - name: "openai/gsm8k"
-        dataset_name: "gsm8k"
-        subset: "main"
-        split: "train"
-      # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
-      # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
-      #          number_theory, prealgebra, precalculus
-      - name: "EleutherAI/hendrycks_math"
-        dataset_name: "hendrycks_math"
-        subset: "__full_subset__"
-        split: "train"
+  # 数据集列表（支持混合 local 和 hf 数据集）
+  datasets:
+    # GSM8K 数据集 (7,473 个训练样本)
+    - dataset_from: "hf"                    # 数据源: "local" 或 "hf"
+      name: "openai/gsm8k"                  # HuggingFace 数据集路径
+      dataset_name: "gsm8k"                 # 数据集名称（用于标识）
+      subset: "main"                        # 子集名称（可选）
+      split: "train"                        # 数据集分割
+      format_type: "gsm8k"                  # 数据格式类型
+      use_shared_memory: false              # 是否使用共享内存（可选）
+    
+    # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
+    # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
+    #          number_theory, prealgebra, precalculus
+    - dataset_from: "hf"
+      name: "EleutherAI/hendrycks_math"
+      dataset_name: "hendrycks_math"
+      subset: "__full_subset__"             # 特殊值：加载所有子集
+      split: "train"
+      format_type: "hendrycks_math"
+      use_shared_memory: false
+    
+    # 可选：混合本地数据集示例
+    # - dataset_from: "local"
+    #   dataset_name: "oasst1"              # 对应 local_dataset_dir/oasst1 目录
+    #   format_type: "standard"             # 标准格式（已包含 messages 字段）
+    #   use_shared_memory: false
   
   # Common parameters
   subset_ratio: 0.025
@@ -76,12 +79,6 @@ dataset:
   max_sequence_length: 1024
   processing_num_workers: 10
   overwrite_cache: false
-  
-  # Shared memory configuration (共享内存配置)
-  use_shared_memory: false  # 是否启用共享内存加速数据集加载
-  shared_memory:
-    server_timeout: 30      # 服务器响应超时时间（秒）
-    auto_start: false       # 是否自动启动服务器（暂未实现）
 
 # Training configuration
 training:
