--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -43,33 +43,30 @@ tag: "none"
 
 # Dataset configuration
 dataset:
-  # Data source selection: "local" or "hf" (should match stage 1 configuration)
-  dataset_from: "hf"  # Options: "local" (本地数据集), "hf" (HuggingFace数据集)
-
-  # Local dataset configuration (used when dataset_from="local")
-  local:
-    data_dir: "dataset/train/processed"
-    dataset_names:
-      - "cot"
-      - "dolly"
-      - "flan_v2"
-      - "oasst1"
-
-  # HuggingFace dataset configuration (used when dataset_from="hf")
-  hf:
-    datasets:
-      # GSM8K 数据集 (7,473 个训练样本)
-      - name: "openai/gsm8k"
-        dataset_name: "gsm8k"
-        subset: "main"
-        split: "train"
-      # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
-      # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
-      #          number_theory, prealgebra, precalculus
-      - name: "EleutherAI/hendrycks_math"
-        dataset_name: "hendrycks_math"
-        subset: "__full_subset__"
-        split: "train"
+  # 本地数据集根目录（所有 local 数据集的根路径）
+  local_dataset_dir: "dataset/train/processed"
+  
+  # 数据集列表（应与 stage 1 配置保持一致）
+  datasets:
+    # GSM8K 数据集 (7,473 个训练样本)
+    - dataset_from: "hf"
+      name: "openai/gsm8k"
+      dataset_name: "gsm8k"
+      subset: "main"
+      split: "train"
+      format_type: "gsm8k"
+      use_shared_memory: false
+    
+    # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
+    # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
+    #          number_theory, prealgebra, precalculus
+    - dataset_from: "hf"
+      name: "EleutherAI/hendrycks_math"
+      dataset_name: "hendrycks_math"
+      subset: "__full_subset__"
+      split: "train"
+      format_type: "hendrycks_math"
+      use_shared_memory: false
 
   # Common parameters
   shuffle: false
