--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -59,22 +59,29 @@ dataset:
     # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
     # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
     #          number_theory, prealgebra, precalculus
-    - dataset_from: "hf"
-      name: "EleutherAI/hendrycks_math"
-      dataset_name: "hendrycks_math"
-      subset: "__full_subset__"             # 特殊值：加载所有子集
-      split: "train"
-      format_type: "hendrycks_math"
-      use_shared_memory: false
+    # - dataset_from: "hf"
+    #   name: "EleutherAI/hendrycks_math"
+    #   dataset_name: "hendrycks_math"
+    #   subset: "__full_subset__"             # 特殊值：加载所有子集
+    #   split: "train"
+    #   format_type: "hendrycks_math"
+    #   use_shared_memory: false
+
     
     # 可选：混合本地数据集示例
+    - dataset_from: "local"
+      dataset_name: "oasst1"              # 对应 local_dataset_dir/oasst1 目录
+      format_type: "standard"             # 标准格式（已包含 messages 字段）
+      use_shared_memory: false
+
+    
     # - dataset_from: "local"
-    #   dataset_name: "oasst1"              # 对应 local_dataset_dir/oasst1 目录
-    #   format_type: "standard"             # 标准格式（已包含 messages 字段）
+    #   dataset_name: "noise_dataset_24k"  # 根据你生成的数据集名称修改
+    #   format_type: "standard"
     #   use_shared_memory: false
   
   # Common parameters
-  subset_ratio: 0.025
+  subset_ratio: 0.25
   shuffle: true
   max_sequence_length: 1024
   processing_num_workers: 10
