feat: 更新数据集加载逻辑，统一数据集schema
- 在stage_1_warmup.yaml中添加noise_dataset_24k的加载配置，增强数据集加载灵活性。
- 在dataset_loader.py中引入标准数据集schema，确保合并数据集时字段顺序一致。
- 更新format_converters.py中的消息格式构建，确保messages字典的键顺序符合标准。

--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -69,16 +69,16 @@ dataset:
 
     
     # 可选：混合本地数据集示例
-    - dataset_from: "local"
-      dataset_name: "oasst1"              # 对应 local_dataset_dir/oasst1 目录
-      format_type: "standard"             # 标准格式（已包含 messages 字段）
-      use_shared_memory: false
+    # - dataset_from: "local"
+    #   dataset_name: "oasst1"              # 对应 local_dataset_dir/oasst1 目录
+    #   format_type: "standard"             # 标准格式（已包含 messages 字段）
+    #   use_shared_memory: false
 
     
-    # - dataset_from: "local"
-    #   dataset_name: "noise_dataset_24k"  # 根据你生成的数据集名称修改
-    #   format_type: "standard"
-    #   use_shared_memory: false
+    - dataset_from: "local"
+      dataset_name: "noise_dataset_24k"  # 根据你生成的数据集名称修改
+      format_type: "standard"
+      use_shared_memory: false
   
   # Common parameters
   subset_ratio: 0.25
