--- a/configs/stage_3_finetune.yaml
+++ b/configs/stage_3_finetune.yaml
@@ -57,13 +57,13 @@ dataset:
     # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
     # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra,
     #          number_theory, prealgebra, precalculus
-    - dataset_from: "hf"
-      name: "EleutherAI/hendrycks_math"
-      dataset_name: "hendrycks_math"
-      subset: "__full_subset__"
-      split: "train"
-      format_type: "hendrycks_math"
-      use_shared_memory: false
+    # - dataset_from: "hf"
+    #   name: "EleutherAI/hendrycks_math"
+    #   dataset_name: "hendrycks_math"
+    #   subset: "__full_subset__"
+    #   split: "train"
+    #   format_type: "hendrycks_math"
+    #   use_shared_memory: false
   
   # Common parameters
   subset_ratio: 1.0  # Use 100% of data in full mode
