--- a/configs/stage_2_selection.yaml
+++ b/configs/stage_2_selection.yaml
@@ -49,23 +49,17 @@ dataset:
   # 数据集列表（应与 stage 1 配置保持一致）
   datasets:
     # GSM8K 数据集 (7,473 个训练样本)
-    - dataset_from: "hf"
-      name: "openai/gsm8k"
-      dataset_name: "gsm8k"
-      subset: "main"
-      split: "train"
-      format_type: "gsm8k"
-      use_shared_memory: false
-    
-    # HENDRYCKS_MATH 数据集 - 使用 __full_subset__ 自动加载所有 7 个子集 (7,500 个训练样本)
-    # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra, 
-    #          number_theory, prealgebra, precalculus
-    - dataset_from: "hf"
-      name: "EleutherAI/hendrycks_math"
-      dataset_name: "hendrycks_math"
-      subset: "__full_subset__"
-      split: "train"
-      format_type: "hendrycks_math"
+    - dataset_from: "hf"                    # 数据源: "local" 或 "hf"
+      name: "openai/gsm8k"                  # HuggingFace 数据集路径
+      dataset_name: "gsm8k"                 # 数据集名称（用于标识）
+      subset: "main"                        # 子集名称（可选）
+      split: "train"                        # 数据集分割
+      format_type: "gsm8k"                  # 数据格式类型
+      use_shared_memory: false              # 是否使用共享内存（可选）
+
+    - dataset_from: "local"
+      dataset_name: "noise_dataset_24k"  
+      format_type: "standard"
       use_shared_memory: false
 
   # Common parameters
