feat: 添加faker库作为依赖，增强数据生成能力
- 在`pyproject.toml`中添加`faker`库的依赖，版本为`>=37.12.0`，以支持数据生成需求。
- 更新`uv.lock`文件，确保`faker`库的相关信息和依赖被正确记录。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "prettytable>=3.16.0",
     "evaluate>=0.4.5",
     "vllm>=0.8.5.post1",
+    "faker>=37.12.0",
 ]
 
 [tool.uv.sources]
