feat: 更新数据集配置，统一使用faker_dataset_24k
- 将stage_1_warmup.yaml、stage_2_selection.yaml和stage_3_finetune_noise.yaml中的数据集名称从noise_dataset_24k更改为faker_dataset_24k，以保持一致性。
- 在selection_utils.py中添加对faker_dataset_*格式的支持，动态生成相应的加载配置，提升数据集管理的灵活性。

--- a/configs/stage_1_warmup.yaml
+++ b/configs/stage_1_warmup.yaml
@@ -76,7 +76,7 @@ dataset:
 
     
     - dataset_from: "local"
-      dataset_name: "noise_dataset_24k"  # 根据你生成的数据集名称修改
+      dataset_name: "faker_dataset_24k"  # 根据你生成的数据集名称修改
       format_type: "standard"
       use_shared_memory: false
   
