--- a/configs/stage_3_finetune_noise.yaml
+++ b/configs/stage_3_finetune_noise.yaml
@@ -58,7 +58,7 @@ dataset:
     # 子集包括: algebra, counting_and_probability, geometry, intermediate_algebra,
     #          number_theory, prealgebra, precalculus
     - dataset_from: "local"
-      dataset_name: "noise_dataset_24k"  # 根据你生成的数据集名称修改
+      dataset_name: "faker_dataset_24k"  # 根据你生成的数据集名称修改
       format_type: "standard"
       use_shared_memory: false
   
